# lab2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.TXT  cmake_install.cmake  main.cpp
include/: Comparable.h  Container.h  LinkedList.h  PyramidicSort.h  ShellSort.h  TimeCompare.h  Vector.h  operating.h  random.h
sources/: LinkedList.tpp  PyramidicSort.tpp  ShellSort.tpp  TimeCompare.tpp  Vector.tpp  operating.tpp
tests/: LinkedListTest.cpp  PyramidicTest.cpp  ShellTest.cpp  VectorTest.cpp
